--- a/index.css
+++ b/index.css
@@ -93,3 +93,24 @@ footer {
     justify-content: left;
 
   }
+
+.facts{
+   
+   margin-top: 40px;
+    justify-content: center;
+    font-size: larger;
+    height: 20%;
+    width: 50%;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  
+    text-align: center;
+    margin-left: 25%;
+    border-radius: 20px;
+    color: rgb(208, 238, 240) !important;
+    opacity: 90%;  
+    background-color: rgb(33, 76, 141);
+}
+
+
